<resources>
    <string name="app_name">MDS_TP3_Quiz</string>
    <!-- Tokens -->
    <string name="facebook_application_id" translatable="false">673164810943292</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb673164810943292</string>
    <string name="facebook_client_token">fda4192b41eabb29d33aac7f36eb2ce6</string>

    <!-- Strings -->
    <string name="login_title">Sign up now</string>
    <string name="login_subtitle">Join the quiz in the pursuit of knowledge</string>
    <string name="login_email_label">Email</string>
    <string name="login_username_label">Username</string>
    <string name="login_password_label">Password</string>
    <string name="login_other_options_label">Or sign-in with</string>
    <string name="login_sign_up_now_button">Sign up now</string>
    <string name="login_sign_in_button">Sign in</string>
    <string name="web_client_id">390079287266-5esrurd06c48gm97dd9hodf6vfsr50ci.apps.googleusercontent.com</string>
    <string name="login_sign_in_now_button">Sign up now</string>

    <!-- Home Screen -->
    <string name="home_welcomeText">Welcome, <b>%s</b>!</string>
    <string name="home_letsPlay">Let\'s play!</string>
    <string name="home_homeContext">Games can be a great way to learn new concepts.</string>
    <string name="home_daysStrike"><b>%d</b> days strike!</string>
    <string name="home_newGame">New Game</string>
    <string name="home_dailyPoints">%d + to daily points</string>
    <string name="home_dailyStrikeAchieved">Congratulations! +1 day strike</string>

    <!-- Quiz Screen -->
    <string name="question_text">Dummy question</string>
    <string name="answer1">Dummy answer</string>
    <string name="answer2">Dummy answer</string>
    <string name="answer3">Dummy answer</string>
    <string name="answer4">Dummy answer</string>
    <string name="current_round_formatter">Question %d of 10</string>
    <string name="quit">Quit</string>
    <string name="no_return">Press the \"<i>Quit</i>\" button</string>
    <string name="proceed_to_next">Next Question</string>

    <!--Game Over Screen-->
    <string name="congrats">Congrats!</string>
    <string name="your_score">Your score</string>
    <string name="play_again">Play Again</string>
    <string name="correct_answers">%d/10</string>
    <string name="points_earned">+%d Points</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="leaderboard_title">Leaderboard</string>
    <string name="email">%s</string>
    <string name="nickname">%s</string>
    <string name="total_matches">%d</string>
    <string name="total_points">%d</string>
    <string name="rank">%s</string>

</resources>