<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.quiz_game.fragments.QuestionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp">

            <TextView android:id="@+id/counter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dummy counter"
                android:textAlignment="center"
                android:textSize="16dp" />
            <TextView android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_text"
                android:textAlignment="center"
                android:textSize="24dp"
                android:textStyle="bold" />

                <Button android:id="@+id/answer1"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/answer1"></Button>
                <Button android:id="@+id/answer2"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/answer2"></Button>
                <Button android:id="@+id/answer3"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/answer3"></Button>
                <Button android:id="@+id/answer4"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:text="@string/answer4"></Button>

    </LinearLayout>
</FrameLayout>