<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.quiz_game.fragments.GameOverFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/congrats"
            style="@style/Theme.MDS_TP3_Quiz.smallText"
            android:textSize="52dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_score"
            style="@style/Theme.MDS_TP3_Quiz.TextView.Subtitle"
            android:textSize="17dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:id="@+id/correctAnswers"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/correct_answers"
                style="@style/Theme.MDS_TP3_Quiz.TextView.Subtitle"></TextView>
            <TextView
                android:id="@+id/pointsEarned"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/points_earned"
                style="@style/Theme.MDS_TP3_Quiz.TextView.Subtitle"></TextView>
        </LinearLayout>
        <Button
            android:id="@+id/playAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_again"></Button>
    </LinearLayout>

</FrameLayout>