<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="@dimen/large_margin"
    android:paddingHorizontal="@dimen/normal_margin"
    android:orientation="vertical">

        <TextView
            android:id="@+id/home_welcomeBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:alpha="0.7"
            style="@style/Theme.MDS_TP3_Quiz.smallText"/>

        <TextView
            android:id="@+id/home_letsPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_letsPlay"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_below="@+id/home_welcomeBack"
            style="@style/Theme.MDS_TP3_Quiz.homeText"/>

        <TextView
            android:id="@+id/home_textContext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_homeContext"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_below="@id/home_letsPlay"
            style="@style/Theme.MDS_TP3_Quiz.homeText"/>

    <LinearLayout
        style="@style/Theme.MDS_TP3_Quiz.homeProfileInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/normal_margin"
        android:background="@drawable/home_profile_section_bg"
        android:elevation="@dimen/small_margin"
        android:layout_marginHorizontal="@dimen/normal_margin"
        android:layout_marginTop="@dimen/large_margin"
        android:orientation="vertical"
        android:layout_below="@+id/home_textContext">

        <TextView
            android:id="@+id/home_user_level"
            style="@style/Theme.MDS_TP3_Quiz.homeProfileInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginHorizontal="@dimen/normal_margin"/>

        <TextView
            android:id="@+id/home_current_exp"
            style="@style/Theme.MDS_TP3_Quiz.homeProfileInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginHorizontal="@dimen/normal_margin"/>

        <ProgressBar
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:id="@+id/home_profileExpBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginHorizontal="@dimen/normal_margin"
            android:progressTint="@color/secondaryDarkColor"
            android:max="100"/>

    </LinearLayout>

    <Button
        android:id="@+id/home_newGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_newGame"
        android:layout_alignParentBottom="true"
        android:textAllCaps="false" />

</RelativeLayout>