<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.navigation.fragments.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/small_margin">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            style="@style/Theme.MDS_TP3_Quiz.TextView.Title"
            android:text="Profile"
            android:textSize="32sp"
            android:layout_marginVertical="@dimen/small_margin"></TextView>

        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="150dp"
            android:layout_height="150dp"
            card_view:cardCornerRadius="250dp"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/large_margin">

            <ImageView
                android:id="@+id/userPicture"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_baseline_person_24"
                android:scaleType="centerCrop"/>

        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textAlignment="center"
            style="@style/Theme.MDS_TP3_Quiz.TextView.Title"/>
        <TextView
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nickname"
            android:textAlignment="center"
            style="@style/Theme.MDS_TP3_Quiz.TextView.Title"
            android:layout_marginBottom="@dimen/large_margin"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/rank"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="150dp"
                card_view:cardCornerRadius="4dp"
                android:layout_weight="1"
                card_view:cardBackgroundColor="@color/primaryColor"
                android:layout_marginHorizontal="@dimen/small_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Ranking"
                        android:textAlignment="center"
                        style="@style/Theme.MDS_TP3_Quiz.TextView.Title"
                        />
                    <TextView
                        android:id="@+id/tv_rank"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rank"
                        android:textAlignment="center"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/matches"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="150dp"
                card_view:cardCornerRadius="4dp"
                android:layout_weight="1"
                card_view:cardBackgroundColor="@color/primaryColor"
                android:layout_marginHorizontal="@dimen/small_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Total Matches"
                        android:textAlignment="center"
                        style="@style/Theme.MDS_TP3_Quiz.TextView.Title"
                        />
                    <TextView
                        android:id="@+id/tv_matches"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/total_matches"
                        android:textAlignment="center"/>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/totalPoints"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="150dp"
                card_view:cardCornerRadius="4dp"
                android:layout_weight="1"
                card_view:cardBackgroundColor="@color/primaryColor"
                android:layout_marginHorizontal="@dimen/small_margin">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Total Points"
                        android:textAlignment="center"
                        style="@style/Theme.MDS_TP3_Quiz.TextView.Title"
                        />
                    <TextView
                        android:id="@+id/tv_total_points"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/total_points"
                        android:textAlignment="center"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>


    </LinearLayout>


</FrameLayout>